\name{NEWS}
\title{News for Package \pkg{RecordTest}}
\newcommand{\cpkg}{\href{https://CRAN.R-project.org/package=#1}{\pkg{#1}}}
\newcommand{\issue}{\href{https://github.com/JorgeCastilloMateo/RecordTest/issues/#1}{(issue #1)}}

\section{Changes in Version 2.1.1 ()}{
  \subsection{MODIFICATIONS}{
    \itemize{
      \item Confidence intervals (CIs) are renamed to reference intervals (RIs) in the \sQuote{MANUAL} and legends for being a more appropriate definition for these intervals (no argument will be modified).
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item Functions \code{N.plot} and \code{p.plot} displayed all four types of records in the legend, even when only one type of record was plotted. Now the legend only shows the type of records that are plotted.
    }
  }
}

\section{Changes in Version 2.1.0 (05 August 2021)}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item New function \code{change.point} to perform the Castillo-Mateo change-point detection tests was added. 
      \item Previously, if the series had \code{NA} values, all the record indicators from that time took \code{NA} value. This made the functions return \code{NA} p-values, etc. Now the \code{NA} values are treated as non-records, i.e., \eqn{I_t = 0}, unless they are the first observation, i.e., \eqn{I_1 = 1}.
      \item \code{records} function only allowed to show points, now it also shows lines.
    }
  }
  \subsection{MODIFICATIONS}{
    \itemize{
      \item The three missing values of the \code{TX_Zaragoza} dataset now take the value \code{NA}, in previous Versions these values were imputed. This change does not affect the \code{ZaragozaSeries} dataset.
      \item The \sQuote{MANUAL} help pages were updated.
      \item The \sQuote{VIGNETTES} file was updated.
    }
  }
}

\section{Changes in Version 2.0.0 (13 February 2021)}{
  \subsection{NEW FEATURES}{
    \itemize{