@@ -174,9 +174,10 @@
 #' “Distribution-Free Changepoint Detection Tests Based on the Breaking of Records.”
 #' Available at \href{https://arxiv.org/abs/2105.08186}{arXiv:2105.08186} 
 #'
-#' Cebrián A, Castillo-Mateo J, Asín J (2021).
+#' Cebrián AC, Castillo-Mateo J, Asín J (2021).
 #' “Record Tests to Detect Non Stationarity in the Tails with an Application to Climate Change.”
-#' Available at Research Square \doi{10.21203/rs.3.rs-214787/v1}
+#' \emph{Stochastic Environmental Research and Risk Assessment}. 
+#' \doi{10.1007/s00477-021-02122-w}
 #' 
 #' Diersen J, Trenkler G (1996). “Records Tests for Trend in Location.”
 #' \emph{Statistics}, \strong{28}(1), 1-12.
